[gd_scene load_steps=5 format=3]

[ext_resource type="Script" path="res://features/combat/ComboRunnerTest.gd" id="1"]
[ext_resource type="Script" path="res://features/combat/InputBuffer.gd" id="2"]
[ext_resource type="Script" path="res://features/combat/ComboRunner.gd" id="3"]
[ext_resource type="Script" path="res://features/combat/ComboRunnerDebugHUD.gd" id="4"]

[node name="ComboRunnerTest" type="Node"]
script = ExtResource("1")

[node name="InputBuffer" type="Node" parent="."]
script = ExtResource("2")
BUFFER_MS = 350
MAX_BUFFER_ENTRIES = 8

[node name="ComboRunner" type="Node" parent="."]
script = ExtResource("3")
STEP_DUR_MS = 300
WINDOW_MS = 280
ALWAYS_OPEN = true

[node name="ComboRunnerDebugHUD" type="CanvasLayer" parent="."]
script = ExtResource("4")
layer = 1

[node name="VBox" type="VBoxContainer" parent="ComboRunnerDebugHUD"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0

[node name="L_buffer" type="Label" parent="ComboRunnerDebugHUD/VBox"]
text = "Buffer:"

[node name="L_state" type="Label" parent="ComboRunnerDebugHUD/VBox"]
text = "State:"

[node name="L_combo" type="Label" parent="ComboRunnerDebugHUD/VBox"]
text = "Combo:"

[node name="L_step" type="Label" parent="ComboRunnerDebugHUD/VBox"]
text = "Step:"

[node name="L_window" type="Label" parent="ComboRunnerDebugHUD/VBox"]
text = "Window:"

[node name="L_time" type="Label" parent="ComboRunnerDebugHUD/VBox"]
text = "t_left:"

[node name="L_last" type="Label" parent="ComboRunnerDebugHUD/VBox"]
text = "Last Combo: -"
